[DEVOPS-529] installers: Apply refactors from DEVOPS-533
DEVOPS-533 branch has support for generating installers with multiple
backends and necessarily refactors the installer code.

This commit applies the essence of those refactors to make the future
merge easier.

--- a/installers/cardano-installer.cabal
+++ b/installers/cardano-installer.cabal
@@ -23,6 +23,7 @@ executable make-installer
                      , filepath
                      , megaparsec
                      , nsis
+                     , system-filepath
                      , temporary
                      , text
                      , turtle
